updated media query to stop wrapping in tablet and desktop sizes in wins page dropdown

--- a/_sass/elements/_old_dropdown_filters.scss
+++ b/_sass/elements/_old_dropdown_filters.scss
@@ -168,7 +168,8 @@ a.old-clear-filter-tags {
   }
 }
 
-@media (max-width: 659px) {
+//media query is up to the browser defined laptop size to eliminate wrapping
+@media (max-width: 1024px) {
   //creating 2 rows and 2 columns to display categories on mobile
   ul.old-filter-list {
     display: grid;
